--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,12 +3,12 @@
 - name: Load variables
   include_vars: "{{ ansible_os_family }}.yml"
 
-- name: "remove existing systemd-networkd configuration"
+- name: "Remove existing systemd-networkd configuration"
   file:
     path: "/etc/systemd/network"
     state: absent
 
-- name: "create systemd-networkd directory"
+- name: "Create systemd-networkd directory"
   file:
     path: "/etc/systemd/network"
     owner: root
@@ -27,7 +27,7 @@
       mode: 0644
     when: item.netdev_options is defined and
           item.netdev_options | selectattr("key", "==", "Kind") and
-          item.netdev_options | selectattr("value", "!=", "WireGuard")
+          item.netdev_options | selectattr("value", "!=", "wireguard")
     with_items: "{{ systemd_networkd_netdev }}"
 
   - name: Create sensitive systemd.netdev files
@@ -39,8 +39,9 @@
       mode: 0600
     when: item.netdev_options is defined and
           item.netdev_options | selectattr("key", "equalto", "Kind") and
-          item.netdev_options | selectattr("value", "equalto", "WireGuard")
+          item.netdev_options | selectattr("value", "equalto", "wireguard")
     with_items: "{{ systemd_networkd_netdev }}"
+    no_log: true
     notify: restart networkd
 
 - name: Create systemd.networkd files
@@ -63,25 +64,25 @@
     owner: root
     group: root
 
-- name: start and enable networkd
+- name: Start and enable systemd-networkd
   service:
     name: systemd-networkd
     state: started
     enabled: yes
     daemon_reload: yes
 
-- name: start and enable resolved
+- name: Start and enable systemd-resolved
   service:
     name: systemd-resolved
     state: started
     enabled: yes
     daemon_reload: yes
 
-- name: set timezone
+- name: Set system timezone
   timezone:
     name: "{{ systemd_timesyncd_timezone }}"
 
-- name: start and enable timesyncd
+- name: Start and enable systemd-timesyncd
   service:
     name: systemd-timesyncd
     state: started
