--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: restart networkd
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ item }}"
     state: restarted
     daemon_reload: true
