--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,7 @@
     path: "/etc/systemd/network"
     owner: root
     group: root
-    mode: 0755
+    mode: "0755"
     state: directory
 
 - name: Create systemd.netdev files
@@ -24,7 +24,7 @@
       dest: "/etc/systemd/network/{{ item.filename }}"
       owner: "{{ systemd_networkd_unix_user }}"
       group: "{{ systemd_networkd_unix_user }}"
-      mode: 0644
+      mode: "0644"
     when: item.netdev_options is defined and
           item.netdev_options | selectattr("key", "==", "Kind") and
           item.netdev_options | selectattr("value", "!=", "wireguard")
@@ -36,7 +36,7 @@
       dest: "/etc/systemd/network/{{ item.filename }}"
       owner: "{{ systemd_networkd_unix_user }}"
       group: "{{ systemd_networkd_unix_user }}"
-      mode: 0600
+      mode: "0600"
     when: item.netdev_options is defined and
           item.netdev_options | selectattr("key", "equalto", "Kind") and
           item.netdev_options | selectattr("value", "equalto", "wireguard")
@@ -50,7 +50,7 @@
     dest: "/etc/systemd/network/{{ item.filename }}"
     owner: "{{ systemd_networkd_unix_user }}"
     group: "{{ systemd_networkd_unix_user }}"
-    mode: 0644
+    mode: "0644"
   with_items: "{{ systemd_networkd_network }}"
   notify: Restart networkd
 
