style: use quotation marks for the name of an action

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,13 +7,13 @@ galaxy_info:
   license: MIT
   min_ansible_version: "2.9"
   platforms:
-  - name: ArchLinux
+  - name: "ArchLinux"
     versions:
     - all
-  - name: Ubuntu
+  - name: "Ubuntu"
     versions:
     - all
-  - name: Fedora
+  - name: "Fedora"
     versions:
     - "35"
 
