--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,15 +6,18 @@ galaxy_info:
   license: MIT
   min_ansible_version: "2.9"
   platforms:
-  - name: "ArchLinux"
+  - name: ArchLinux
     versions:
     - all
-  - name: "Ubuntu"
+  - name: EL
     versions:
     - all
-  - name: "Fedora"
+  - name: Fedora
     versions:
-    - "35"
+    - all
+  - name: Ubuntu
+    versions:
+    - all
 
   # galaxy_tags:
   # - systemd-networkd
