fix(ansible-galaxy): add namespace

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,27 +1,22 @@
+dependencies: []
 galaxy_info:
-  role_name: networking
   author: Markus Pesch
-  description: Role to configure network interfaces via systemd on different distributions
   company: Cryptic Systems
+  description: Role to configure network interfaces via systemd on different distributions
   license: MIT
   min_ansible_version: "2.9"
+  namespace: volker-raschek
   platforms:
-  - name: ArchLinux
-    versions:
-    - all
-  - name: EL
-    versions:
-    - all
-  - name: Fedora
-    versions:
-    - all
-  - name: Ubuntu
-    versions:
-    - all
-
-  # galaxy_tags:
-  # - systemd-networkd
-  # - wiregurd
-  # - resolvectl
-
-dependencies: []
+    - name: ArchLinux
+      versions:
+        - all
+    - name: EL
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
+    - name: Ubuntu
+      versions:
+        - all
+  role_name: networking
