--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 
 - name: "Include OS-specific variables"
-  ansible.builtin.include_vars: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_vars: "{{ ansible_facts['os_family'] }}.yaml"
 
 - name: "Remove existing systemd-networkd configuration"
   ansible.builtin.file:
