fix: replace deprecated INJECT_FACTS_AS_VARS

--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -1,7 +1,17 @@
 ---
 
-- name: "Include OS-specific variables"
-  ansible.builtin.include_vars: "{{ ansible_facts['os_family'] }}.yaml"
+- name: Include OS-specific variables
+  ansible.builtin.include_vars: "{{ lookup('first_found', params) }}"
+  vars:
+    params:
+      files:
+      - "{{ ansible_facts['distribution'] }}_{{ ansible_facts['architecture'] }}.yaml"
+      - "{{ ansible_facts['distribution'] }}.yaml"
+      - "{{ ansible_facts['os_family'] }}_{{ ansible_facts['architecture'] }}.yaml"
+      - "{{ ansible_facts['os_family'] }}.yaml"
+      - main.yaml
+      paths:
+      - vars
 
 - name: "Remove existing systemd-networkd configuration"
   ansible.builtin.file:
